--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1> Test</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic HTML with Tailwind and JavaScript</title>
+    <!-- Include Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body>
+
+<div class="container mx-auto mt-5">
+    <h1 class="text-3xl font-bold mb-3">Hello, Tailwind CSS!</h1>
+    <p class="text-gray-600">This is a basic HTML file with Tailwind CSS and JavaScript.</p>
+    <button id="clickMeBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-3">Click Me</button>
+    <p id="message" class="mt-3"></p>
+</div>
+
+<!-- Include JavaScript -->
+<script>
+    // JavaScript code
+    document.getElementById('clickMeBtn').addEventListener('click', function() {
+        document.getElementById('message').innerText = 'Button clicked!';
+    });
+</script>
+
+</body>
+</html>
