--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body class="flex flex-col items-center justify-center h-screen">
 
-<div class="w-full  text-center">
+<div class="w-full text-center">
     <img src="patti.png" alt="Portrait Image" class="portrait-image mx-auto mb-6 rounded-full h-48 w-48 object-cover">
     <h1 class="text-3xl font-bold mb-3">Happy Birthday Patti!</h1>
 </div>
@@ -51,14 +51,14 @@
         <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
     </div>
     <h3 class="text-center">Great! Here is your timetable for today 😜</h3>
-    <div id="section1" class="mt-5 w-full sm:w-1/3">
-        <div class="section-card" id="section1-content"></div>
+    <div id="section1" class="text-center mt-5 w-full sm:w-1/3">
+        <div class="section-card px-4" id="section1-content"></div>
     </div>
-    <div id="section2" class="mt-5 w-full sm:w-1/3">
-        <div class="section-card" id="section2-content"></div>
+    <div id="section2" class="text-center mt-5 w-full sm:w-1/3">
+        <div class="section-card px-4" id="section2-content"></div>
     </div>
-    <div id="section3" class="mt-5 w-full sm:w-1/3">
-        <div class="section-card" id="section3-content"></div>
+    <div id="section3" class="text-center mt-5 w-full sm:w-1/3">
+        <div class="section-card px-4" id="section3-content"></div>
     </div>
 </div>
 
