--- a/index.html
+++ b/index.html
@@ -28,12 +28,28 @@
 
         /* Adjust portrait image position */
         .portrait-image {
-            margin-top: -20px; /* Adjust as needed */
+            margin-top: -10%; /* Adjust as needed */
             border: 2px solid #d1d5db; /* Grey border */
+        }
+
+        /* Sticky header and footer */
+        #question-section, #hidden-stuff-2 {
+            position: sticky;
+            top: 0;
+            z-index: 999;
+            background-color: white; /* Match your background */
+            padding: 20px;
+        }
+
+        /* Scrolling hidden content */
+        #hidden-stuff-1 {
+            overflow-y: auto;
+            max-height: calc(100vh - 350px); /* Adjust according to your needs */
+            width: 100%;
         }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center h-screen">
+<body class="flex flex-col items-center justify-center min-h-screen">
 
 <div class="w-full text-center">
     <img src="patti.png" alt="Portrait Image" class="portrait-image mx-auto mb-6 rounded-full h-48 w-48 object-cover">
@@ -49,19 +65,15 @@
 </div>
 
 <!-- Sections -->
-<div id="hidden-stuff-1" class="hidden px-4">
-    <div class="w-full text-center">
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-gray-700">
+<div id="hidden-stuff-1" class="hidden px-4 w-full flex flex-wrap justify-center">
+    <div class="w-full sm:w-1/3 px-2 mt-5">
+        <div class="section-card" id="section1-content"></div>
     </div>
-    <h3 class="text-center">Great! Here is your timetable for today 😜</h3>
-    <div id="section1" class="text-center mt-5 w-full sm:w-1/3">
-        <div class="section-card px-4" id="section1-content"></div>
+    <div class="w-full sm:w-1/3 px-2 mt-5">
+        <div class="section-card" id="section2-content"></div>
     </div>
-    <div id="section2" class="text-center mt-5 w-full sm:w-1/3">
-        <div class="section-card px-4" id="section2-content"></div>
-    </div>
-    <div id="section3" class="text-center mt-5 w-full sm:w-1/3">
-        <div class="section-card px-4" id="section3-content"></div>
+    <div class="w-full sm:w-1/3 px-2 mt-5">
+        <div class="section-card" id="section3-content"></div>
     </div>
 </div>
 
