--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
             <div class="section-content text-center">
                 <h2 class="text-lg font-semibold mb-2">That hunger better be satisfied now!</h2>
-                <p class="text-gray-600">Section 3 content goes here...</p>
+                <p class="text-gray-600">It's time for something exciting! The only tip I can give you is that we won't only be standing upright. Let's head to the city together.</p>
             </div>
         `;
     } else {
