--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     // Define an array of birthday messages in different languages
     const birthdayMessages = [
-        "Wszystkiego najlepszego z okazji urodzin Patti!",
+        "Sto lat Patti!",
         "Gefeliciteerd Patti!",
         "¡Feliz Cumpleaños Patti!",
         "Happy birthday Patti!"
