--- a/index.html
+++ b/index.html
@@ -51,6 +51,25 @@
             padding: 5px;
             z-index: 999; /* Ensure footer is above other content */
         }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-10px);
+            }
+            60% {
+                transform: translateY(-5px);
+            }
+        }
+
+        .scroll-arrow {
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: bounce 1.5s infinite;
+        }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen">
@@ -79,6 +98,12 @@
 <!-- Sections -->
 <div id="hidden-stuff-1" class="hidden mt-4 px-4 w-full flex flex-wrap justify-center">
     <p id="message-2" class="text-center mb-6"> Here you'll find your schedule for today. Be sure to come back regularly, because with time, more information will become available. 😉</p>
+    <div class="scroll-arrow">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+        </svg>
+    </div>
+
     <div class="w-full sm:w-1/3 px-2 mt-5">
         <div class="section-card" id="section1-content"></div>
     </div>
