--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <!-- Footer -->
 <footer class="fixed bottom-0 left-0 w-full bg-gray-800 text-white text-center py-1">
-    <p class="mb-2">Made with ❤️ by your favorite person</p>
+    <p class="mt-1 mb-2">Made with ❤️ by your favorite person</p>
     <p>© 2024 Patti's Birthday</p>
 </footer>
 
