--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <div class="w-full text-center">
     <img src="patti.png" alt="Portrait Image" class="portrait-image mx-auto mb-6 rounded-full h-48 w-48 object-cover">
-    <h1 id="birthday-message" class="text-3xl font-bold mb-3 transition-all duration-500 transform scale-100 opacity-100">Happy Birthday Patti!</h1>
+    <h1 id="birthday-message" class="text-3xl font-bold mb-3 transition-all duration-500 transform scale-100 opacity-100">Happy Birthday Patti! 🎉</h1>
 </div>
 
 <div id="hidden-stuff-2" class="hidden mt-4 px-4">
@@ -85,7 +85,7 @@
 
 <div id="question-section" class="text-center">
     <p id="message-0" class="mb-6">Let me start by wishing you the best birthday (hopefully) yet! You're an amazing woman and I'm grateful to be able to make these beautiful memories together.</p>
-    <p id="message-1" class="mb-6"> I hope I don't have to tell you how much I truly love you; let this day be an example of that. ❤️</p>
+    <p id="message-1" class="mb-6"> I hope I don't have to tell you how much I truly love you; let this day be an example of that.</p>
     <hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
     <p id="started" class="mt-2">So lets get started...</p>
     <p id="question" class="mb-3">Are you excited for your birthday?!</p>
@@ -200,10 +200,10 @@
 
     // Define an array of birthday messages in different languages
     const birthdayMessages = [
-        "Sto lat Patti!",
-        "Gefeliciteerd Patti!",
-        "¡Feliz Cumpleaños Patti!",
-        "Happy birthday Patti!"
+        "Sto lat Patti! 🎉",
+        "Gefeliciteerd Patti! 🎉",
+        "¡Feliz Cumpleaños Patti! 🎉",
+        "Happy birthday Patti! 🎉"
     ];
 
     // Function to change the birthday message every 3 seconds with a fancy animation
