--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div id="hidden-stuff-1" class="hidden mt-4 px-4 w-full flex flex-wrap justify-center">
     <p id="message-2" class="text-center mb-6 unlocked-text"> Here you'll find your schedule for today. Be sure to come back regularly, because with time, more information will become available. 😉</p>
     <div class="scroll-arrow">
-        <i class="fas fa-chevron-down fa-2x"></i>
+        <i class="fas fa-chevron-down fa-2x text-gray-600"></i>
     </div>
 
     <div class="w-full sm:w-1/3 px-2 mt-5">
