--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 
 <!-- Footer -->
 <footer class="fixed bottom-0 left-0 w-full bg-gray-800 text-white text-center py-1">
-    <p class="mt-1 mb-2">Made with ❤️ by your favorite person</p>
-    <p>© 2024 Patti's Birthday</p>
+    <p class="mt-1 mb-2 text-md">Made with ❤️ by your favorite person</p>
+    <p class="text-sm">© 2024 Patti's Birthday</p>
 </footer>
 
 <!-- Include JavaScript -->
