--- a/index.html
+++ b/index.html
@@ -78,13 +78,31 @@
             font-family: 'Open Sans', sans-serif;
             /* Add more styles if necessary */
         }
+
+        /* Heartbeat animation */
+        @keyframes heartbeat {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+
+        /* Apply heartbeat animation to heart icon */
+        .heartbeat {
+            animation: heartbeat 1s infinite;
+        }
+
+        /* Add slight outline to heart icon */
+        .heart-outline {
+            -webkit-text-stroke: 0.5px black; /* Outline color and width */
+            -webkit-text-fill-color: red; /* Fill color */
+        }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen">
 
-<div class="w-full text-center">
+<div class="w-full text-center flex flex-col items-center justify-center">
     <img src="patti.png" alt="Portrait Image" class="portrait-image mx-auto mb-6 rounded-full h-48 w-48 object-cover">
-    <h1 id="birthday-message" class="text-3xl font-bold mb-3 transition-all duration-500 transform scale-100 opacity-100 unlocked-text">Happy Birthday Patti! 🎉</h1>
+    <h1 id="birthday-message" class="text-3xl font-bold mb-3 transition-all duration-500 transform scale-100 opacity-100 unlocked-text">Happy Birthday Patti!</h1>
 </div>
 
 <div id="hidden-stuff-2" class="hidden mt-4 px-4">
@@ -92,9 +110,13 @@
 </div>
 
 <div id="question-section" class="text-center unlocked-text">
-    <p id="message-0" class="mb-6">Let me start by wishing you the best birthday (hopefully) yet! You're an amazing woman and I'm grateful to be able to make these beautiful memories together.</p>
-    <p id="message-1" class="mb-6"> I hope I don't have to tell you how much I truly love you; let this day be an example of that.</p>
-    <hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
+    <p id="message-0" class="mb-6">Let me start by wishing you the best birthday (hopefully) yet! 🎉</p>
+    <p id="message-3" class="mb-6">You're an amazing woman and I'm grateful to be able to make these beautiful memories together.</p>
+    <p id="message-1" class="mb-6">I hope I don't have to tell you how much I truly love you; let this day be an example of that.</p>
+    <div class="w-full sm:w-1/3 px-2 mt-5">
+        <i class="fas fa-heart text-red-500 text-4xl block text-center heartbeat heart-outline"></i>
+    </div>
+    <hr class="w-48 h-1 mx-auto my-4 bg-gray-200 border-0 rounded md:my-10 dark:bg-gray-700">
     <p id="started" class="mt-2">So lets get started...</p>
     <p id="question" class="mb-3">Are you excited for your birthday?!</p>
     <button id="yesBtn" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mb-2 sm:mr-2">Yes..
@@ -123,8 +145,8 @@
 
 <!-- Footer -->
 <footer class="fixed bottom-0 left-0 w-full bg-gray-800 text-white text-center py-1">
-    <p class="mt-1 mb-2 text-md">Made with ❤️ by your favorite person</p>
-    <p class="text-sm">© 2024 Patti's Birthday</p>
+    <p class="mt-1 mb-2 text-md">Made with <i class="fas fa-heart text-red-500"></i> by your favourite person</p>
+    <p class="text-sm mb-1">© 2024 Patti's Birthday</p>
 </footer>
 
 <!-- Include JavaScript -->
@@ -148,6 +170,7 @@
         document.getElementById("nahBtn").classList.add('hidden');
         document.getElementById("message-0").classList.add('hidden');
         document.getElementById("message-1").classList.add('hidden');
+        document.getElementById("message-3").classList.add('hidden');
         document.getElementById("started").classList.add('hidden');
         document.getElementById("question").innerText = "ARE YOU EXCITED WOMAN??";
         document.getElementById("yesBtn").innerText = "Okay, fine 😒"
@@ -206,10 +229,10 @@
 
     // Define an array of birthday messages in different languages
     const birthdayMessages = [
-        "Sto lat Patti! 🎉",
-        "Gefeliciteerd Patti! 🎉",
-        "¡Feliz Cumpleaños Patti! 🎉",
-        "Happy birthday Patti! 🎉"
+        "Sto lat Patti!",
+        "Gefeliciteerd Patti!",
+        "¡Feliz Cumpleaños Patti!",
+        "Happy birthday Patti!"
     ];
 
     // Function to change the birthday message every 3 seconds with a fancy animation
