--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen">
+<body class="flex flex-col items-center justify-center overflow-hidden">
 
 <div class="w-full text-center flex flex-col items-center justify-center">
     <img src="patti.png" alt="Portrait Image" class="portrait-image mx-auto mb-6 rounded-full h-48 w-48 object-cover">
