--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 
         /* Footer styles */
         footer {
-            position: fixed;
-            bottom: 0;
+            position: relative; /* Change position to relative */
             width: 100%;
             background-color: white; /* Match your background */
             padding: 5px;
@@ -100,7 +99,7 @@
 </head>
 <body class="flex flex-col items-center justify-center overflow-hidden">
 
-<div class="w-full text-center flex flex-col items-center justify-center mt-4">
+<div class="w-full text-center flex flex-col items-center justify-center mt-6">
     <img src="patti.png" alt="Portrait Image" class="portrait-image mx-auto mb-6 rounded-full h-48 w-48 object-cover">
     <h1 id="birthday-message" class="text-3xl font-bold mb-3 transition-all duration-500 transform scale-100 opacity-100 unlocked-text">Happy Birthday Patti!</h1>
 </div>
