--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             width: 100%;
         }
 
-        /* Footer styles */
         footer {
             position: relative; /* Change position to relative */
             width: 100%;
             background-color: white; /* Match your background */
             padding: 5px;
             z-index: 999; /* Ensure footer is above other content */
+            margin-top: 10px; /* Add margin to create space between footer and content */
         }
 
         @keyframes bounce {
