--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             background-color: white; /* Match your background */
             padding: 5px;
             z-index: 999; /* Ensure footer is above other content */
+            margin-top: 10px;
         }
 
         @keyframes bounce {
