--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
                 <img class="mt-2 px-2 object-contain h-28 w-96" src="michelin.webp" alt="Section 2 Image">
             </div>
         `;
+        scrollToBottom("hidden-stuff-1");
     } else {
         document.getElementById('section2-content').innerHTML = '<p class="text-center unlocked-text text-gray-500"><i class="fas fa-lock"></i> Unlocked at 09-02-2024 @ 15:00</p>';
     }
@@ -260,11 +261,15 @@
         }, 3000); // Change message every 3 seconds
     }
 
+    // Function to scroll to the bottom of a specific section
+    function scrollToBottom(sectionId) {
+        const section = document.getElementById(sectionId);
+        section.scrollTop = section.scrollHeight;
+    }
     // Call the function when the DOM content is loaded
     document.addEventListener('DOMContentLoaded', function () {
         changeBirthdayMessage();
         // Scroll to the bottom of the page
-        window.scrollTo(0, document.body.scrollHeight);
     });
 </script>
 
