--- a/index.html
+++ b/index.html
@@ -39,11 +39,17 @@
         }
 
         /* Scrolling hidden content */
-        #hidden-stuff-1, #hidden-stuff-2 {
+        #hidden-stuff-1 {
             overflow-y: auto;
             max-height: calc(100vh - 400px); /* Adjust according to your needs */
             width: 100%;
             margin-bottom: auto;
+        }
+
+        #hidden-stuff-2 {
+            overflow-y: auto;
+            max-height: calc(100vh - 400px); /* Adjust according to your needs */
+            width: 100%;
         }
 
         /* Footer styles */
