--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         document.getElementById("message-1").classList.add('hidden');
         document.getElementById("message-3").classList.add('hidden');
         document.getElementById("started").classList.add('hidden');
+        document.getElementById('birthday-div').classList.add('mt-2');
         document.getElementById("question").innerText = "ARE YOU EXCITED WOMAN??";
         document.getElementById("yesBtn").innerText = "Okay, fine 😒"
     });
