--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
 
         /* Footer styles */
         footer {
-            position: fixed;
+            /* position: fixed; */ /* Remove fixed positioning */
             bottom: 0;
             width: 100%;
             background-color: white; /* Match your background */
             padding: 5px;
             z-index: 999; /* Ensure footer is above other content */
+        }
+
+        body {
+            overflow-y: auto; /* Enable vertical scrolling */
+            overscroll-behavior-y: none; /* Disable rubber-banding effect */
         }
 
         @keyframes bounce {
@@ -106,7 +111,7 @@
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen">
 
-<div id="birthday-div" class="w-full text-center flex flex-col items-center justify-center">
+<div id="birthday-div" class="w-full text-center flex flex-col items-center justify-center mt-4">
     <img src="patti.png" alt="Portrait Image" class="portrait-image mx-auto mb-6 rounded-full h-48 w-48 object-cover">
     <h1 id="birthday-message" class="text-3xl font-bold mb-3 transition-all duration-500 transform scale-100 opacity-100 unlocked-text">Happy Birthday Patti!</h1>
 </div>
@@ -150,7 +155,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="fixed bottom-0 left-0 w-full bg-gray-800 text-white text-center py-1">
+<footer class="bottom-0 left-0 w-full bg-gray-800 text-white text-center py-1">
     <p class="mt-1 mb-2 text-md">Made with <i class="fas fa-heart text-red-500"></i> by your favourite person</p>
     <p class="text-sm mb-1">© 2024 Patti's Birthday</p>
 </footer>
