--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
 
         #hidden-stuff-1 {
             overflow-y: auto;
-            max-height: calc(100vh - 275px); /* Adjust according to your needs */
+            max-height: calc(100vh - 325px); /* Adjust according to your needs */
             width: 100%;
-            margin-bottom: auto;
         }
 
         #hidden-stuff-2 {
@@ -141,9 +140,7 @@
     <div class="w-full sm:w-1/3 px-2 mt-5">
         <div class="section-card" id="section1-content"></div>
     </div>
-    <div class="w-full sm:w-
-
-1/3 px-2 mt-5">
+    <div class="w-full sm:w-1/3 px-2 mt-5">
         <div class="section-card" id="section2-content"></div>
     </div>
     <div class="w-full sm:w-1/3 px-2 mt-5">
