--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
             <hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
             <div class="section-content text-center">
                 <h2 class="text-lg font-semibold mb-2">Any idea where we are going yet?</h2>
+                <p class="text-gray-600">HA HA you thought you were getting some info? You're not. Too bad 🥱</p>
                 <p class="text-gray-600">Get comfortable, we got a long drive ahead of us, and make sure not to peek, asshole!</p>
             </div>
         `;
