--- a/index.html
+++ b/index.html
@@ -17,10 +17,85 @@
             box-sizing: border-box;
         }
 
+        /* Loading Screen */
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: linear-gradient(135deg, #B91C1C 0%, #047857 50%, #FFC107 100%);
+            background-size: 400% 400%;
+            animation: gradientShift 8s ease infinite;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 99999;
+            transition: opacity 0.5s ease-out;
+        }
+
+        #loading-screen.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        @keyframes gradientShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .loading-content {
+            text-align: center;
+            color: white;
+            width: 100%;
+            max-width: 500px;
+            padding: 0 20px;
+        }
+
+        .loading-spinner {
+            width: 80px;
+            height: 80px;
+            border: 8px solid rgba(255, 255, 255, 0.3);
+            border-top: 8px solid white;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 0 auto 30px;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+
+        .loading-bar-container {
+            width: 300px;
+            max-width: 90%;
+            height: 8px;
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 10px;
+            overflow: hidden;
+            margin: 20px auto 0 auto;
+        }
+
+        .loading-bar {
+            height: 100%;
+            background: white;
+            width: 0%;
+            animation: loadProgress 2s ease-in-out forwards;
+            border-radius: 10px;
+        }
+
+        @keyframes loadProgress {
+            to { width: 100%; }
+        }
+
         body {
             font-family: 'Poppins', sans-serif;
             overflow-x: hidden;
             background: linear-gradient(135deg, #FDE2E4 0%, #FAD9E0 50%, #FDE2E4 100%);
+            background-size: 400% 400%;
+            animation: gradientShift 15s ease infinite;
             min-height: 100vh;
         }
 
@@ -305,10 +380,28 @@
             cursor: grab;
             max-width: 100%;
             touch-action: none;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
         }
 
         #scratch-canvas:active {
             cursor: grabbing;
+        }
+
+        #scratch-canvas.flip-3d {
+            animation: flip3d 0.8s ease-in-out;
+        }
+
+        @keyframes flip3d {
+            0% {
+                transform: rotateY(0deg) scale(1);
+            }
+            50% {
+                transform: rotateY(90deg) scale(0.95);
+            }
+            100% {
+                transform: rotateY(180deg) scale(1);
+            }
         }
 
         .scratch-hint {
@@ -388,6 +481,22 @@
             }
         }
 
+        /* Confetti */
+        .confetti {
+            position: fixed;
+            width: 10px;
+            height: 10px;
+            z-index: 10000;
+            pointer-events: none;
+        }
+
+        @keyframes confettiFall {
+            to {
+                transform: translateY(100vh) rotate(720deg);
+                opacity: 0;
+            }
+        }
+
         .gift-card {
             background: white;
             border-radius: 20px;
@@ -442,6 +551,18 @@
     </style>
 </head>
 <body>
+    <!-- Loading Screen -->
+    <div id="loading-screen">
+        <div class="loading-content">
+            <div class="loading-spinner"></div>
+            <h2 class="dancing-font text-4xl mb-4">Booting up nuclear reactor.....</h2>
+            <p class="text-lg opacity-90">🎄✨</p>
+            <div class="loading-bar-container">
+                <div class="loading-bar"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Snowflakes Container -->
     <div id="snowflakes-container"></div>
 
@@ -612,12 +733,19 @@
 
         let currentQuestionIndex = 0;
 
-        // Create snowflakes
+        // Loading screen
+        window.addEventListener('load', () => {
+            setTimeout(() => {
+                document.getElementById('loading-screen').classList.add('hidden');
+            }, 2500);
+        });
+
+        // Create enhanced snowflakes
         function createSnowflakes() {
             const container = document.getElementById('snowflakes-container');
             const snowflakes = ['❄', '❅', '❆'];
 
-            for (let i = 0; i < 20; i++) {
+            for (let i = 0; i < 30; i++) {
                 const snowflake = document.createElement('div');
                 snowflake.className = 'snowflake';
                 snowflake.textContent = snowflakes[Math.floor(Math.random() * snowflakes.length)];
@@ -625,7 +753,28 @@
                 snowflake.style.fontSize = (Math.random() * 20 + 10) + 'px';
                 snowflake.style.animationDuration = (Math.random() * 10 + 10) + 's';
                 snowflake.style.animationDelay = Math.random() * 5 + 's';
+                snowflake.style.opacity = (Math.random() * 0.6 + 0.4).toString();
                 container.appendChild(snowflake);
+            }
+        }
+
+        // Confetti explosion
+        function createConfetti() {
+            const colors = ['#B91C1C', '#047857', '#FFC107', '#EC4899', '#8B5CF6', '#10B981'];
+            for (let i = 0; i < 100; i++) {
+                setTimeout(() => {
+                    const confetti = document.createElement('div');
+                    confetti.className = 'confetti';
+                    confetti.style.left = Math.random() * 100 + '%';
+                    confetti.style.top = '50%';
+                    confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+                    confetti.style.width = (Math.random() * 10 + 5) + 'px';
+                    confetti.style.height = (Math.random() * 10 + 5) + 'px';
+                    confetti.style.animation = `confettiFall ${Math.random() * 2 + 2}s linear forwards`;
+                    document.body.appendChild(confetti);
+
+                    setTimeout(() => confetti.remove(), 4000);
+                }, i * 10);
             }
         }
 
@@ -735,10 +884,15 @@
                 if (currentQuestionIndex < quizQuestions.length) {
                     showQuestion(true);
                 } else {
-                    // Quiz completed! Start the scratch game
-                    document.getElementById('quiz-screen').style.display = 'none';
-                    document.getElementById('scratch-screen').style.display = 'flex';
-                    initScratchCard();
+                    // Quiz completed! Celebrate with confetti!
+                    createConfetti();
+
+                    // Wait for confetti to start, then transition to scratch game
+                    setTimeout(() => {
+                        document.getElementById('quiz-screen').style.display = 'none';
+                        document.getElementById('scratch-screen').style.display = 'flex';
+                        initScratchCard();
+                    }, 1500);
                 }
             }, 600); // Wait for fade-out animation (0.5s) plus small buffer
         }
@@ -960,6 +1114,9 @@
         }
 
         function transitionToGreenGift() {
+            // Add 3D flip animation
+            canvas.classList.add('flip-3d');
+
             // Flash effect and transition to green gift
             canvas.style.transition = 'opacity 0.5s';
             canvas.style.opacity = '0.3';
@@ -970,6 +1127,7 @@
 
                 // Wait 2 seconds then go to prize reveal
                 setTimeout(() => {
+                    canvas.classList.remove('flip-3d');
                     revealGift();
                 }, 2000);
             }, 500);
